# nu_plugin_compress

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release-on-tag.yml
src/: compress.rs  decompress.rs  main.rs
